tests/algorithms/x/Clojure/project_euler/problem_014/sol1.error
run: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_014/sol1.clj:50:893).
Can only recur from tail position

Full report at:
/tmp/clojure-10042283842546491221.edn
